--- a/test-dev.properties
+++ b/test-dev.properties
@@ -1,2 +1,4 @@
 ## test
-{} test {}
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=scott
+spring.datasource.password={cipher}ENCRYPTED_PASSWORD
