--- a/transfer-dev.properties
+++ b/transfer-dev.properties
@@ -8,4 +8,4 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
-management.endpoints.web.exposure.include=refresh, health, beans
+management.endpoints.web.exposure.include=refresh, health
