--- a/transfer-dev.properties
+++ b/transfer-dev.properties
@@ -1,9 +1,9 @@
 server.port=8090
 spring.application.name=transfer
-spring.datasource.url=jdbc:mariadb://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/db2
 spring.datasource.username=root
 spring.datasource.password=1234
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
