--- a/transfer-dev.properties
+++ b/transfer-dev.properties
@@ -2,7 +2,7 @@ server.port=8090
 spring.application.name=transfer
 spring.datasource.url=jdbc:mysql://localhost:3306/db2
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath:mappers/*.xml
