--- a/transfer-dev.properties
+++ b/transfer-dev.properties
@@ -1,4 +1,4 @@
-server.port=8090
+server.port=8088
 spring.application.name=transfer
 spring.datasource.url=jdbc:mysql://localhost:3306/db2
 spring.datasource.username=root
@@ -8,4 +8,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
-management.endpoints.web.exposure.include=refresh, health
+management.endpoints.web.exposure.include=refresh, health, beans
