--- a/transfer-dev.properties
+++ b/transfer-dev.properties
@@ -1,8 +1,8 @@
-server.port=8088
+server.port=8090
 spring.application.name=transfer
-spring.datasource.url=jdbc:mysql://localhost:3306/db20
-spring.datasource.username=root0
-spring.datasource.password=12340
+spring.datasource.url=jdbc:mysql://localhost:3306/db2
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath:mappers/*.xml
