--- a/transfer-dev.properties
+++ b/transfer-dev.properties
@@ -9,3 +9,4 @@ mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
 management.endpoints.web.exposure.include=refresh, health
+management.endpoint.decrypt.enabled=false
