--- a/quitstart-dev.properties
+++ b/quitstart-dev.properties
@@ -2,4 +2,4 @@ server.port = 7777
 spring.application.name=quitstart
 
 # 공통 데이터소스 설정 가져오기
-spring.config.import=classpath:/datasource.properties
+spring.config.import=configserver:/datasource.properties
