--- a/AdminServer-dev.properties
+++ b/AdminServer-dev.properties
@@ -1,4 +1,27 @@
 spring.application.name=AdminServer
 
-# 공통 데이터소스 설정 가져오기
-spring.config.import=classpath:/datasource.properties
+spring.boot.admin.context-path=/
+spring.boot.admin.ui.cache.no-cache=true
+spring.boot.admin.ui.extension-resource-locations=file:D:/_source/spring-boot-admin-2.1.1/spring-boot-admin-samples/spring-boot-admin-sample-custom-ui/target/dist/
+spring.boot.admin.ui.cache-templates=false
+spring.boot.admin.ui.enable-refresh=true
+
+info.app.name=AdminServer
+info.add.description=This is an application to manage banking services
+info.app.version=1.0
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+management.httpexchanges.recording.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.info.env.enabled = true
+
+management.endpoints.jmx.exposure.include=*
+management.endpoints.web.base-path=/actuator
+
+mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.neo.adminserver.dto
