--- a/AdminServer-dev.properties
+++ b/AdminServer-dev.properties
@@ -5,6 +5,8 @@ spring.boot.admin.ui.cache.no-cache=true
 spring.boot.admin.ui.extension-resource-locations=file:D:/_source/spring-boot-admin-2.1.1/spring-boot-admin-samples/spring-boot-admin-sample-custom-ui/target/dist/
 spring.boot.admin.ui.cache-templates=false
 spring.boot.admin.ui.enable-refresh=true
+spring.boot.admin.discovery.enabled: false
+spring.boot.admin.ui.remember-last-url: false
 
 info.app.name=AdminServer
 info.add.description=This is an application to manage banking services
