--- a/AdminServer-dev.properties
+++ b/AdminServer-dev.properties
@@ -1,6 +1,6 @@
 spring.application.name=AdminServer
 
-spring.boot.admin.context-path=/adminPage
+spring.boot.admin.context-path=/admin
 spring.boot.admin.ui.cache.no-cache=true
 spring.boot.admin.ui.extension-resource-locations=file:D:/_source/spring-boot-admin-2.1.1/spring-boot-admin-samples/spring-boot-admin-sample-custom-ui/target/dist/
 spring.boot.admin.ui.cache-templates=false
