--- a/quitstart-dev.yml
+++ b/quitstart-dev.yml
@@ -11,7 +11,7 @@ spring:
   boot:
     admin:
       client:
-        url: http://localhost:19000/adminPage
+        url: http://localhost:19000/admin
 #        username: admin
 #        password: admin
     
