--- a/transfer-dev.yml
+++ b/transfer-dev.yml
@@ -9,7 +9,7 @@ spring:
   boot:
     admin:
       client:
-        url: http://localhost:19000/adminPage
+        url: http://localhost:19000/admin
 
 eureka:
   client:
