--- a/quitstart-dev.yml
+++ b/quitstart-dev.yml
@@ -14,6 +14,11 @@ spring:
         url: http://localhost:19000/admin
 #        username: admin
 #        password: admin
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
     
 mybatis:
   mapper-locations: classpath:mappers/*.xml
